# GRPC_Server

./: .env  Dockerfile  README.md  docker-compose.yml  init_db.sql  pyproject.toml
alembic/: env.py
client/: client.py  config.json
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  grpcdata.py
proto/: data.proto  data_pb2.py  data_pb2_grpc.py
server/: config.json  server.py
